# senarclens.github.io

./: .editorconfig  CNAME  LICENSE  _config.yml  delme.md  index.md
cheat_sheets/: index.md
dvcs/: gh_classroom_workflow.md  index.md
jupyter/: index.md
linux/: about.md  index.md  installation.md  ssh-config.md  ssh-copy.md  ssh-pka.md  ssh-server.md  ssh.md
notes/: bug_tracker.md  oss_licenses.md  usability.md  vscodium.md
postgres/: index.md
programming/: index.md
programming/c/: index.md  introduction.md
programming/cpp/: index.md
programming/cpp/wx/: CMakeLists.txt  Makefile  ide_config.md  index.md  kdevelop.md
programming/py/: index.md  ipython.md  virtualenv.md
programming/py/argparse/: index.md
programming/py/micropython/: index.md
programming/py/pygame/: index.md
programming/py/web/: index.md
programming/py/wxpython/: index.md
programming/python/: index.md  installation.md
programming/python/argparse/: 3_final_example.py
programming/python/micropython/: index.md
programming/sql/: crud.md  index.md
programming/sql/mariadb and mysql/: administration.md
programming/sql/postgres/: index.md
programming/web/: deployment.md  index.md  nodejs.md
python/: index.md  installation.md
python/argparse/: 1_auto_help.py  2_various_examples.py  argparse.md  sys.argv.py
python/installation/: index.md
sql/: crud.md  index.md  joins.md  tools.md
sql/mariadb and mysql/: administration  administration.md  index.md
sql/postgres/: administration.md
tools/: index.md  vscodium.md
